# Contamination-in-Generated-Text-Detection-Benchmarks

./: .gitignore  README.md  pyproject.toml
DetectRL/: README.md  README_DetectRL.md
DetectRL/Data_Generation/: Chat_API.py  DIPPER.py  benchmark construction.py  data_generation.py  data_mixing.py
DetectRL/Detectors/: DetectGPT.py  DetectGPT_evaluation.py  DetectGPT_evaluation_new.py  Fast_DetectGPT.py  Fast_DetectGPT_evaluation.py  LRR_evaluation.py  NPR_evaluation.py  binoculars_detector.py  binoculars_evaluation.py  dna_gpt_evaluation.py  entropy.py  entropy_evaluation.py  evaluate_roberta_detect_RL_generalisation_results.ipynb  likelihood_evaluation.py  logRank_evaluation.py  loss.py  metrics.py  rank.py  rank_evaluation.py  revise.py  roberta_evaluation.py  train_roberta.py  train_roberta_detect_RL.py  zero_shot_transfer_evaluation.py
DetectRL/sh_scripts/: DIPPER.sh  attacks_evaluation.sh  data_generation.sh  domains_evaluation.sh  human_writing_evaluation.sh  llms_evaluation.sh  load_dataset.sh  varying_length_evaluation.sh
notebooks/: README.md
notebooks/01_data_preparation/: 00_data_contamination_exploration.ipynb  01_data_preparation_regex.ipynb  02_train_roberta_identify_samples_for_recleaning.ipynb  03_data_preparation_clean_using_openai.ipynb  04_data_prep_regenerate_data_other_attacks.ipynb
notebooks/02_training_and_eval/: T00_train_RoBERTa_basics.ipynb  T01_train_RoBERTa_to_identify_samples_for_recleaning.ipynb  (+4 more)
results/: gpt-4.1-arxiv_generations.parquet  recleaned_data.parquet
src/: .env copy  README.md  config.py  few_shot_prompting_detectrl_examples.json  fewshot_prompting.py  general_functions_and_patterns_for_detection.py  openAI_client.py
(+62 files in other folders)
